# pi-coding-agent-gui-office-wrapper

./: .gitignore  AGENTS.md  DEVELOPMENT.md  FOR_THE_USER.md  PI_SDK_MODERNIZATION_MIGRATION_REPORT.md  THIRD_PARTY_NOTICES.md  backend.bat  frontend_gui_local.bat  frontend_gui_remote.bat  frontend_tui.bat  future-sandboxing-notes.md  package-gui-for-users.bat  package-lock.json  package.json  pi-remote-architecture-plan.md  refresh-officeagent-auth.bat  sandboxing-notes.md  setup-windows-sandbox-v2.bat  setup-windows-sandbox-v2.ps1  tsconfig.base.json
apps/client-runtime/: README.md  package.json
apps/gateway/: README.md  package.json
apps/gui/: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  UPSTREAM.md  biome.json  electron-builder.yml  header.md  package.json  release.md  tsconfig.desktop.json  tsconfig.electron.json  tsconfig.json  tsconfig.scripts.json  vite.config.ts
apps/new_gui/: DESIGN.md  DEVELOPER.md  biome.json  electron-builder.yml  index.html  package.json  tsconfig.desktop.json  tsconfig.electron.json  tsconfig.scripts.json  vitest.config.ts
apps/tui/: README.md  package.json
docs/planning/: FORK_NOTES.md  broad_initial_ideas.md  future-sandbox-notes.md  gui-shell-plan.md  remote-tool-file-outputs-plan.md  sandboxing-notes.md  server-vfs-standard-tools-plan.md  sql-execution-in-server-refactor.md  windows-sandbox-codex-aligned-redesign.md  windows-sandbox-v2-codex-inspired.md
mock_logo_activity/: index.html  script.js  styles.css
mock_ui/: index.html  script.js  styles.css
native/windows-sandbox-helper/: Cargo.toml  README.md
native/windows-sandbox-helper/src/: cap.rs  constants.rs  diagnostics.rs  dpapi.rs  lib.rs  main.rs  named_pipes.rs  platform.rs  protocol.rs  runner_launch.rs  runner_protocol.rs  sandbox_credentials.rs  setup.rs  setup_error.rs  setup_orchestrator.rs  setup_status.rs  v2_file_ops.rs  v2_paths.rs  windows_accounts.rs  windows_acl.rs  windows_hide_users.rs  windows_identity.rs  windows_logon.rs  windows_restricted_process.rs  windows_services.rs
(+696 files in other folders)
