[package]
name = "officeagent-windows-sandbox-helper"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[[bin]]
name = "officeagent-windows-sandbox-helper"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Security_Isolation",
  "Win32_Storage_FileSystem",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
] }
