[package]
name = "officeagent-windows-sandbox-helper"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[[bin]]
name = "officeagent-windows-sandbox-helper"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dunce = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[[bin]]
name = "office-agent-windows-sandbox-setup"
path = "src/bin/setup.rs"

[[bin]]
name = "office-agent-command-runner"
path = "src/bin/command_runner.rs"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_JobObjects",
  "Win32_System_Pipes",
  "Win32_System_Threading",
] }
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_NetManagement",
  "Win32_Security",
  "Win32_Security_Authentication_Identity",
  "Win32_Security_Authorization",
  "Win32_Security_Cryptography",
  "Win32_Storage_FileSystem",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_JobObjects",
  "Win32_System_Registry",
  "Win32_System_Services",
  "Win32_System_Threading",
] }
